<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".views.SplashScreenActivity"
    android:gravity="center_horizontal"
    >


    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="45sp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:layout_above="@id/tv_app_slogan"
        />

    <TextView
        android:id="@+id/tv_app_slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_slogan"
        android:textSize="13sp"
        android:gravity="center"
        android:layout_above="@id/iv_app_logo"
        />


    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:contentDescription="@string/content_description_logo"
        android:src="@drawable/logo"
        android:layout_centerInParent="true"
        />


    <ImageView
        android:id="@+id/microsoft_logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/microsoftlogo"
        android:contentDescription="@string/content_description_microsoft_logo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />



</RelativeLayout>